--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>document</title>
 </head>
 <body>
-    <p>Привет</p>   
+   <div style="text-align: center;">
+<p class="box">Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
+
+
+
+   </div>   
 </body>
 </html>
