--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
     <title>document</title>
 </head>
 <body>
-   <div style="text-align: center;">
-<p class="box">Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
+   <header>
+<p>Сережка</p>
 
 
 
-   </div>   
+
+
+
+   </header>
+  
+
+
+
+
+  
 </body>
 </html>
