--- a/index.html
+++ b/index.html
@@ -8,17 +8,53 @@
     <title>document</title>
 </head>
 <body>
-   <header>
-<p>Сережка</p>
+<h1>Landing template for <br> startups</h1>
+<div>
+<p class="text-1" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis corrupti recusandae vero nesciunt. Libero numquam eligendi placeat dolore repellendus, perferendis doloremque tempore hic </p>
+<h2 class="one">Be productive</h2>
+<div>
+<p class="text-2">
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure pariatur molestias omnis quos, autem consectetur magnam deserunt necessitatibus, iste, dolore cum veniam dolor delectus corrupti. Velit quisquam quo quidem possimus.    
+</p>
+</div>
+<h2 class="two">Be productive</h2>
+<p class="text-3">
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure pariatur molestias omnis quos, autem consectetur magnam deserunt necessitatibus, iste, dolore cum veniam dolor delectus corrupti. Velit quisquam quo quidem possimus.    
+</p>
+<h2 class="three">Be productive</h2>
+<p class="text-4">
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure pariatur molestias omnis quos, autem consectetur magnam deserunt necessitatibus, iste, dolore cum veniam dolor delectus corrupti. Velit quisquam quo quidem possimus.
+</p>
 
 
 
 
 
 
-   </header>
-  
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
 
 
 
