Форматирование кода в соответствии со стандартом

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>document</title>
 </head>
 <body>
-<div>
-    <h1>are you ready for<br> test drive</h1>
-    <p>oud</p>
-</div>
-
+    <header class="header">
+        <p>oud</p>
+    </header>
+    <main>
+        <div class="title">
+            <h1>are you ready for<br>test drive</h1>
+        </div>
+    </main>
 </body>
 </html>
