--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>document</title>
 </head>
@@ -13,7 +16,8 @@
     </header>
     <main>
         <div class="title">
-            <h1>are you ready for<br>test drive</h1>
+            <p class="one-line">are you ready for</p>
+            <p class="two-line">test drive</p>
         </div>
     </main>
 </body>
