--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
     <title>document</title>
 </head>
 <body>
-    <header class="header">
-        <p>oud</p>
-    </header>
-    <main>
+    <div class="one-block">
+        <header class="header">
+            <p>oud</p>
+        </header>
         <div class="title">
             <p class="one-line">are you ready for</p>
             <p class="two-line">test drive</p>
         </div>
-    </main>
+    </div>
+    <div class="two-block">
+        <p class="three-line">overview</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam impedit nobis amet, facere debitis eaque deserunt porro cupiditate ducimus asperiores voluptatem placeat exercitationem, excepturi odit ea unde necessitatibus maiores dolorem quas officia pariatur ut quidem. Accusantium dolorum ducimus nulla velit ipsam voluptatem nam, rerum aspernatur doloribus illum vel quae quo rem iusto. Minima consectetur maiores optio at laborum eum iure eaque quaerat rem, veniam vel recusandae deserunt sequi labore eius praesentium ipsa sapiente, illo esse voluptatibus, provident commodi. Possimus, laudantium? Assumenda blanditiis, odit, dolore id eius deleniti recusandae atque, quia sunt aliquid quod dolor sit amet ratione laudantium. Ullam, quis!</p>
+    </div>
 </body>
 </html>
