--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>document</title>
 </head>
 <body>
+<main>
     <div class="one-block">
         <header class="header">
             <p>oud</p>
@@ -23,7 +24,34 @@
     </div>
     <div class="two-block">
         <p class="three-line">overview</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam impedit nobis amet, facere debitis eaque deserunt porro cupiditate ducimus asperiores voluptatem placeat exercitationem, excepturi odit ea unde necessitatibus maiores dolorem quas officia pariatur ut quidem. Accusantium dolorum ducimus nulla velit ipsam voluptatem nam, rerum aspernatur doloribus illum vel quae quo rem iusto. Minima consectetur maiores optio at laborum eum iure eaque quaerat rem, veniam vel recusandae deserunt sequi labore eius praesentium ipsa sapiente, illo esse voluptatibus, provident commodi. Possimus, laudantium? Assumenda blanditiis, odit, dolore id eius deleniti recusandae atque, quia sunt aliquid quod dolor sit amet ratione laudantium. Ullam, quis!</p>
+        <p class="three-line-one">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam impedit nobis amet, facere debitis eaque deserunt porro cupiditate ducimus asperiores voluptatem placeat exercitationem, excepturi odit ea unde necessitatibus maiores dolorem quas officia pariatur ut quidem. Accusantium dolorum ducimus nulla velit ipsam voluptatem nam, rerum aspernatur doloribus illum vel quae quo rem iusto. Minima consectetur maiores optio at laborum eum iure eaque quaerat rem, veniam vel recusandae deserunt sequi labore eius praesentium ipsa sapiente, illo esse voluptatibus, provident commodi. Possimus, laudantium? Assumenda blanditiis, odit, dolore id eius deleniti recusandae atque, quia sunt aliquid quod dolor sit amet ratione laudantium. Ullam, quis!</p>
     </div>
+    <div class="three-block">
+        <p class="four-line">only this month</p>
+        <p class="five-line">20% off</p>
+    </div>
+    <div class="four-block">
+        <p class="six-line">details</p>
+        <p class="seven-line">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit iure ratione provident vitae ut veniam sed architecto maiores odit dolorum dolore, consequuntur, harum numquam aliquam ullam voluptatem. Nihil, recusandae? Non nulla sint nesciunt aliquam sunt ea laboriosam, illum iusto quisquam porro tempore, quis aliquid dolorem quam eum qui eius facere.</p>
+    </div>
+</main>
+<footer>
+    <div class="five-block">
+        <p class="eight-line">Price</p>
+        <p class="back">o2</p>
+        <p class="nine-line">starting from</p>
+        <p class="back-2">cld hz</p>
+        <p class="bucks">$11720</p>
+    </div>
+    <div class="six-block">
+        <p class="footer-title">services</p>
+        <p class="footer-text">Lorem ipsum dolor sit amet consectetur?</p>
+        <p class="footer-title-1">oud ag</p>
+        <p class="footer-text-1">Lorem ipsum dolor sit amet consectetur.</p>
+        <p class="footer-text-2">Lorem, ipsum.</p>
+        <script src="https://yastatic.net/share2/share.js"></script>
+    <div class="ya-share2" data-curtain data-shape="round" data-services="messenger,vkontakte,facebook,odnoklassniki"></div>
+    </div>
+</footer>
 </body>
 </html>
