--- a/index.html
+++ b/index.html
@@ -7,16 +7,31 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
   <title>Document</title>
-    </head>
+</head>
+<body>
   <div class="container">
-      <img class="img-1" src="img/img-1.image" alt="Fuck you">
-      <div class="header"><p class="text-header">FlexStart</p>
-        <div class="button-1"><button class="btn btn-link">Home</button>
+    <div class="header"> 
+      <img class="imgone" src="img/img-1.image" alt="Dont loading">
+        <p class="textheaderone">FlexStart</p>
+        <button class="buttonone btn btn-link offset-1">Home</button>
+        <button class="buttonone btn btn-link">About</button>
+        <button class="buttonone btn btn-link">Services</button>
+        <button class="buttonone btn btn-link">Portfolio</button>
+        <button class="buttonone btn btn-link">Team</button>
+        <button class="buttonone btn btn-link">Blog</button>
+        <button class="buttonone btn btn-link">Drop Down</button>
+        <button class="buttonone btn btn-link">Contact</button>
+        <button class="buttontwo btn btn-link">Get Started</button>
         </div>
+      <div class="bodyimg">
+        <img class=" imgtwo offset-5" src="img/img-2" alt="Dont loading">
       </div>
-    </div>
+      <div class="compilationtext">
+          <p class="textone">We offer modern<br> solutions for growing<br> your business</p>
+      </div>
+  </div>
 </body>
 </html>
