--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
         <button class="buttonone btn btn-link">Drop Down</button>
         <button class="buttonone btn btn-link">Contact</button>
         <button class="buttontwo btn btn-link">Get Started</button>
+      </div>
+        <div class="bodyimg ">
+          <img src="img/img-2" alt="Dotn loading">
+
+
         </div>
-      <div class="bodyimg">
-        <img class=" imgtwo offset-5" src="img/img-2" alt="Dont loading">
-      </div>
-      <div class="compilationtext">
-          <p class="textone">We offer modern<br> solutions for growing<br> your business</p>
-      </div>
   </div>
 </body>
 </html>
