I fucked bootstrap in mouth

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <button class="buttonone btn btn-link">Contact</button>
         <button class="buttontwo btn btn-link">Get Started</button>
       </div>
-        <div class="bodyimg ">
-          <img src="img/img-2" alt="Dotn loading">
-
-
+        <div class="bodytext">
+          <p class="textone">
+            We offer modern solutions for growing your business
+          </p>
         </div>
   </div>
 </body>
