--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       <button class="buttonone btn btn-link">Contact</button>
       <button class="buttontwo btn btn-link">Get Started</button>
     </div>
-    <div class="bodytext">
-      <h1 class="textone">We offer modern<br> solutions for growing<br> your business</h1>
-    </div>
+      <div class="bodytext">
+        <p class="textone">We offer modern<br> solution for growing<br> your business</p>
+      </div>
     <div class="imgbody">
-      <img class="offset-6" src="img/img-2" alt="dont loading">
+      <img class=" imgtwo  col-5 offset-8" src="img/img-2" alt="dont loading">
     </div>
   </div>
 </body>
