--- a/index.html
+++ b/index.html
@@ -6,32 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&family=Raleway:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-      <img class="imgone" src="img/img-1.image" alt="Dont loading">
-      <p class="textheaderone">FlexStart</p>
-      <button class="buttonone btn btn-link offset-1">Home</button>
-      <button class="buttonone btn btn-link">About</button>
-      <button class="buttonone btn btn-link">Services</button>
-      <button class="buttonone btn btn-link">Portfolio</button>
-      <button class="buttonone btn btn-link">Team</button>
-      <button class="buttonone btn btn-link">Blog</button>
-      <button class="buttonone btn btn-link">Drop Down</button>
-      <button class="buttonone btn btn-link">Contact</button>
-      <button class="buttontwo btn btn-link">Get Started</button>
-    </div>
-      <div class="bodytext">
-        <p class="textone">We offer modern<br> solution for growing<br> your business</p>
-      </div>
-    <div class="imgbody">
-      <img class=" imgtwo  col-5 offset-8" src="img/img-2" alt="dont loading">
-    </div>
+  <div class="header">
+    <img class="img-header" src="img/img-1.image" alt="icon">
+      <p class="text-header">FlexStart</p>
+        <a href="ya.ru" class="header-button">Home</a>
+        <a href="ya.ru" class="header-button-1">About</a>
+        <a href="ya.ru" class="header-button-1">Services</a>
+        <a href="ya.ru" class="header-button-1">Portfolio</a>
+        <a href="ya.ru" class="header-button-1">Team</a>
+        <a href="ya.ru" class="header-button-1">Blog</a>
+        <a href="ya.ru" class="header-button-1">Drop Down</a>
+        <a href="ya.ru" class="header-button-1">Contact</>
+    <button class="header-button-2">Get started</button>
+  </div>
+  <div class="body">
+    <h1 class="title" >We offer modern<br> solution for growing<br> your business</h1>
+      <img class="img-body" src="img/img-2" alt="Dont loading">
   </div>
 </body>
 </html>
