топовый код бесплатно без регистрации и смс

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 </head>
 <body>
   <div class="header">
-    <img class="img-header" src="img/img-1.image" alt="icon">
-      <p class="text-header">FlexStart</p>
-        <a href="ya.ru" class="header-button">Home</a>
-        <a href="ya.ru" class="header-button-1">About</a>
-        <a href="ya.ru" class="header-button-1">Services</a>
-        <a href="ya.ru" class="header-button-1">Portfolio</a>
-        <a href="ya.ru" class="header-button-1">Team</a>
-        <a href="ya.ru" class="header-button-1">Blog</a>
-        <a href="ya.ru" class="header-button-1">Drop Down</a>
-        <a href="ya.ru" class="header-button-1">Contact</>
-    <button class="header-button-2">Get started</button>
+  <img class="img-header" src="img/img-1.image" alt="icon">
+  <p class="text-header">FlexStart</p>
+  <a href="ya.ru" class="header-button">Home</a>
+  <a href="ya.ru" class="header-button-1">About</a>
+  <a href="ya.ru" class="header-button-1">Services</a>
+  <a href="ya.ru" class="header-button-1">Portfolio</a>
+  <a href="ya.ru" class="header-button-1">Team</a>
+  <a href="ya.ru" class="header-button-1">Blog</a>
+  <a href="ya.ru" class="header-button-1">Drop Down</a>
+  <a href="ya.ru" class="header-button-1">Contact
+  <button class="header-button-2">Get started</button>
   </div>
-  <div class="body">
-    <h1 class="title" >We offer modern<br> solution for growing<br> your business</h1>
+    <div class="body">
+      <h1 class="title" >We offer modern<br> solution for growing<br> your business</h1>
       <img class="img-body" src="img/img-2" alt="Dont loading">
-  </div>
+    </div>
 </body>
 </html>
