это пиздец, не ругайся

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 </head>
 <body>
   <div class="header">
-    <div class="icon">
-      <img class="img-header" src="img/img-1.image" alt="icon">
+    <div class="logo">
+      <img class="img-logo" src="img/img-1.image" alt="icon">
+      <p class="text-logo">FlexStart</p>
     </div>
     <div class="buttons">
-      <p class="text-header">FlexStart</p>
-      <a href="ya.ru" class="header-button">Home</a>
-      <a href="ya.ru" class="header-button-1">About</a>
-      <a href="ya.ru" class="header-button-1">Services</a>
-      <a href="ya.ru" class="header-button-1">Portfolio</a>
-      <a href="ya.ru" class="header-button-1">Team</a>
-      <a href="ya.ru" class="header-button-1">Blog</a>
-      <a href="ya.ru" class="header-button-1">Drop Down</a>
-      <a href="ya.ru" class="header-button-1">Contact
-      <button class="header-button-2">Get started</button>
+      <a href="ya.ru" class="header-link">Home</a>
+      <a href="ya.ru" class="header-link-1">About</a>
+      <a href="ya.ru" class="header-link-1">Services</a>
+      <a href="ya.ru" class="header-link-1">Portfolio</a>
+      <a href="ya.ru" class="header-link-1">Team</a>
+      <a href="ya.ru" class="header-link-1">Blog</a>
+      <a href="ya.ru" class="header-link-1">Drop Down</a>
+      <a href="ya.ru" class="header-link-1">Contact
+      <button class="header-button">Get started</button>
     </div>
   </div>
   <div class="body">
