--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h1>We offer modern<br> solution for growing<br> your business</h1>
     </div>
     <div class="img">
-      <img src="img/img-2" alt="Dont loading">
+      <img class="content-img" src="img/img-2" alt="Dont loading">
     </div>
   </div>
 </body>
