--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p class="text-logo">FlexStart</p>
     </div>
     <div class="buttons">
-      <a href="ya.ru" class="header-link">Home</a>
+      <a href="ya.ru" class="header-link-1">Home</a>
       <a href="ya.ru" class="header-link-1">About</a>
       <a href="ya.ru" class="header-link-1">Services</a>
       <a href="ya.ru" class="header-link-1">Portfolio</a>
