--- a/index.html
+++ b/index.html
@@ -6,34 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&family=Raleway:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@,0,300;,700;family=Raleway:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
 <body>
-  <div class="header">
-    <div class="logo">
-      <img class="img-logo" src="img/img-1.image" alt="icon">
-      <p class="text-logo">FlexStart</p>
-    </div>
-    <div class="buttons">
-      <a href="ya.ru" class="header-link-1">Home</a>
-      <a href="ya.ru" class="header-link-1">About</a>
-      <a href="ya.ru" class="header-link-1">Services</a>
-      <a href="ya.ru" class="header-link-1">Portfolio</a>
-      <a href="ya.ru" class="header-link-1">Team</a>
-      <a href="ya.ru" class="header-link-1">Blog</a>
-      <a href="ya.ru" class="header-link-1">Drop Down</a>
-      <a href="ya.ru" class="header-link-1">Contact
-      <button class="header-button">Get started</button>
-    </div>
-  </div>
-  <div class="body">
-    <div class="title">
-      <h1>We offer modern<br> solution for growing<br> your business</h1>
-    </div>
-    <div class="img">
-      <img class="content-img" src="img/img-2" alt="Dont loading">
+  <div class="container">
+    <div class="head">
+      <div class="imgone">
+        <img src="img/img-1.image">
+      </div>
     </div>
   </div>
 </body>
