--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <div class="imgone">
         <img src="img/img-1.image">
       </div>
+      <div class="buttons">
+        
+      </div>
     </div>
   </div>
 </body>
