--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@,0,300;,700;family=Raleway:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;1,700&family=Raleway:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
@@ -16,8 +16,16 @@
       <div class="imgone">
         <img src="img/img-1.image">
       </div>
+      <div class="logo-header">
+        <p><strong>FlexStart</strong></p>
+      </div>
       <div class="buttons">
-        
+        <a class="button" href="ya.ru" alt="dont loader">Home</a>
+        <a class="button" href="ya.ru" alt="dont loader">About</a>
+        <a class="button" href="ya.ru" alt="dont loader">Services</a>
+        <a class="button" href="ya.ru" alt="dont loader">Portfolio</a>
+        <a class="button" href="ya.ru" alt="dont loader">Team</a>
+        <a class="button" href="ya.ru" alt="dont loader">Blog</a>
       </div>
     </div>
   </div>
